k8s/stage/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog-stage
  labels:
    app: blog
    project: blog
    environment: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      project: blog
      environment: stage
  template:
    metadata:
      labels:
        app: blog
        project: blog
        environment: stage
    spec:
      containers:
      - name: blog
        image: registry.abyssworks.dev/blog:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog-stage
  labels:
    app: blog
    project: blog
    environment: stage
spec:
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 3000
