k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog-stage
  labels:
    project: blog
    environment: stage
spec:
  ingressClassName: nginx
  rules:
  - host: "blog-stage.abyssworks.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blog
            port:
              number: 80
